<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_alt_action"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_alt_action_label" />

        <Button
            android:id="@+id/btn_cat_status"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_cat_status_label" />

        <Button
            android:id="@+id/btn_cat_event"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_cat_event_label" />

        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_all_label" />
    </LinearLayout>
</ScrollView>
