<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hiqes.lollinotify.SubActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_simple_legacy"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_legacy_label" />

        <Button
            android:id="@+id/btn_simple_public"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_public" />

        <Button
            android:id="@+id/btn_simple_secret"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/btn_simple_secret" />

    </LinearLayout>

</RelativeLayout>
